--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "react-kawaii",
   "version": "0.4.0",
-  "description":
-    "React Kawaii is a library of cute SVG illustrations (react components). Ideal if you want to give some cuteness and personality to your react application.",
+  "description": "React Kawaii is a library of cute SVG illustrations (react components). Ideal if you want to give some cuteness and personality to your react application.",
   "main": "lib/index.js",
   "scripts": {
     "test": "",
